@@ -1,3 +1,6 @@
+[B]Version v0.3.7[/B]
+- Added support to play Audio Streams.
+
 [B]Version v0.3.6[/B]
 - Error handling.
 
